src/test/deca/syntax/valid/class/21_simpleClass.deca
/* Description:
     tester class le plus simple
     (correct syntaxiquement)

    Historique:
      cree le 08/01/2020
*/

   class  A {

   }
