src/test/deca/syntax/invalid/sansObjet/print_sans_semi.deca
/* Description:
    tests de programme lexi correct, syntax incorrect

 Resultats:
    ligne 12: Erreur,sans point virgule

 Historique:
    cree le 10/01/2020
*/
{
print(22)
}
